# UAVD4L

./: README.md
hloc/: check.py  choose_inliner.py  choose_inliner_loftr.py  eval.py  eval_position.py  extract_features.py  extract_features_db.py  extract_features_db_copy.py  extract_features_loftr.py  extract_features_query.py  extract_global_features_db.py  extract_global_features_query.py  get_3dpoints.py  localize_merge.py  localize_retrieval.py  localize_sensloc.py  localize_sensloc_loftr.py  localize_sensloc_loftr_topk.py  localize_sensloc_loftr_withgravity.py  localize_sensloc_topk.py  localize_sensloc_withgravity.py  localize_sfm.py  match.py  match_dense.py  ray_casting.py  (+20 more)
poselib/: CMakeLists.txt
poselib/PoseLib/: types.h
poselib/PoseLib/robust/: utils.cc
poselib/PoseLib/robust/estimators/: absolute_pose.h  relative_pose.h
poselib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
poselib/_build/PoseLib/: Makefile  cmake_install.cmake
poselib/_build/generated_headers/PoseLib/: poselib.h
poselib/_build/pybind/: Makefile  cmake_install.cmake  setup.py
poselib/_build/pybind/pip_package/: poselib-2.0.0-cp37-cp37m-linux_x86_64.whl
poselib/_build/pybind/poselib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
poselib/_install/include/PoseLib/: version.h
poselib/_install/include/PoseLib/robust/: ransac_impl.h
poselib/_install/include/PoseLib/robust/estimators/: homography.h  hybrid_pose.h
poselib/_install/lib/cmake/PoseLib/: PoseLibTargets.cmake
poselib/pybind/: helpers.h  pyposelib.cpp
poselib/sample/: test.py
(+667 files in other folders)
